--- a/MyLittleMonster/Base.lproj/Main.storyboard
+++ b/MyLittleMonster/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyLittleMonster" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,176 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="TcA-ZT-AhP">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <animations/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="livespanel" translatesAutoresizingMaskIntoConstraints="NO" id="7nM-td-HZY">
+                                <rect key="frame" x="180" y="20" width="240" height="78"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="qjg-NI-JuM"/>
+                                    <constraint firstAttribute="height" constant="78" id="uHd-jk-Yzm"/>
+                                </constraints>
+                                <variation key="heightClass=compact" misplaced="YES">
+                                    <rect key="frame" x="180" y="20" width="240" height="23"/>
+                                </variation>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ground" translatesAutoresizingMaskIntoConstraints="NO" id="TuJ-8O-TCw">
+                                <rect key="frame" x="0.0" y="535" width="600" height="65"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="Gnd-FI-MTB"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="msn-kt-SCp">
+                                <rect key="frame" x="199" y="31" width="188" height="55"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull" translatesAutoresizingMaskIntoConstraints="NO" id="G8s-aU-sYw">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="55"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="55" id="Gp3-Dm-aeu"/>
+                                            <constraint firstAttribute="width" constant="60" id="YK8-VV-06T"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull" translatesAutoresizingMaskIntoConstraints="NO" id="h2F-Zm-mU4">
+                                        <rect key="frame" x="64" y="0.0" width="60" height="55"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="O6J-uz-slY"/>
+                                            <constraint firstAttribute="height" constant="55" id="ogc-hf-S59"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skull" translatesAutoresizingMaskIntoConstraints="NO" id="ZkG-ov-eIV">
+                                        <rect key="frame" x="128" y="0.0" width="60" height="55"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="55" id="1lj-vf-mjO"/>
+                                            <constraint firstAttribute="width" constant="60" id="8ec-HD-iW8"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <animations/>
+                                <variation key="heightClass=compact" misplaced="YES">
+                                    <rect key="frame" x="206" y="31" width="188" height="55"/>
+                                </variation>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="idle1" translatesAutoresizingMaskIntoConstraints="NO" id="oOe-Vh-PRE" customClass="MonsterImg" customModule="MyLittleMonster" customModuleProvider="target">
+                                <rect key="frame" x="-15" y="189" width="521" height="364"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="364" id="TVX-ox-Qzf"/>
+                                    <constraint firstAttribute="width" constant="521" id="h8M-Fn-KFV"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="fillEqually" spacing="100" translatesAutoresizingMaskIntoConstraints="NO" id="XoO-xU-EBd">
+                                <rect key="frame" x="144" y="127" width="290" height="98"/>
+                                <subviews>
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" translatesAutoresizingMaskIntoConstraints="NO" id="3YA-tx-aM3" customClass="DragImage" customModule="MyLittleMonster" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="95" height="98"/>
+                                        <animations/>
+                                    </imageView>
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="food" translatesAutoresizingMaskIntoConstraints="NO" id="KIA-DO-ixp" customClass="DragImage" customModule="MyLittleMonster" customModuleProvider="target">
+                                        <rect key="frame" x="195" y="0.0" width="95" height="98"/>
+                                        <animations/>
+                                        <variation key="heightClass=compact" ambiguous="YES">
+                                            <rect key="frame" x="0.0" y="128" width="95" height="98"/>
+                                        </variation>
+                                    </imageView>
+                                </subviews>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="226" id="0Pg-4U-5SP"/>
+                                    <constraint firstItem="KIA-DO-ixp" firstAttribute="top" secondItem="3YA-tx-aM3" secondAttribute="bottom" constant="30" id="2Uy-tL-XOo"/>
+                                    <constraint firstAttribute="width" constant="95" id="t3t-CU-TFe"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="0Pg-4U-5SP"/>
+                                        <exclude reference="t3t-CU-TFe"/>
+                                        <exclude reference="2Uy-tL-XOo"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact" axis="vertical" ambiguous="YES" misplaced="YES" spacing="30">
+                                    <rect key="frame" x="485" y="58" width="95" height="226"/>
+                                    <mask key="constraints">
+                                        <include reference="0Pg-4U-5SP"/>
+                                        <include reference="t3t-CU-TFe"/>
+                                        <include reference="2Uy-tL-XOo"/>
+                                    </mask>
+                                </variation>
+                            </stackView>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="msn-kt-SCp" firstAttribute="centerX" secondItem="7nM-td-HZY" secondAttribute="centerX" id="0SD-pe-wqY"/>
+                            <constraint firstItem="TuJ-8O-TCw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="0e4-1g-VSj"/>
+                            <constraint firstAttribute="trailing" secondItem="TuJ-8O-TCw" secondAttribute="trailing" id="AIw-uu-Zj3"/>
+                            <constraint firstItem="7nM-td-HZY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HNT-m6-aEO"/>
+                            <constraint firstItem="TcA-ZT-AhP" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="TcD-WH-0Yk"/>
+                            <constraint firstItem="XoO-xU-EBd" firstAttribute="top" secondItem="7nM-td-HZY" secondAttribute="bottom" constant="29" id="UD7-M1-3d3"/>
+                            <constraint firstItem="XoO-xU-EBd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UJl-me-mjL"/>
+                            <constraint firstItem="XoO-xU-EBd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UMZ-sl-3Pp"/>
+                            <constraint firstItem="msn-kt-SCp" firstAttribute="centerY" secondItem="7nM-td-HZY" secondAttribute="centerY" id="Uab-G9-Uwq"/>
+                            <constraint firstAttribute="trailing" secondItem="TcA-ZT-AhP" secondAttribute="trailing" id="dIW-Ex-okQ"/>
+                            <constraint firstItem="XoO-xU-EBd" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="38" id="dxg-pl-opH"/>
+                            <constraint firstItem="XoO-xU-EBd" firstAttribute="top" secondItem="7nM-td-HZY" secondAttribute="bottom" constant="15" id="f1f-Ou-hqt"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TuJ-8O-TCw" secondAttribute="bottom" id="hgq-t7-1t7"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="oOe-Vh-PRE" secondAttribute="bottom" constant="47" id="jea-a5-FM9"/>
+                            <constraint firstItem="TcA-ZT-AhP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kPy-4w-uRC"/>
+                            <constraint firstItem="XoO-xU-EBd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mwo-aK-UH4"/>
+                            <constraint firstItem="XoO-xU-EBd" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="oGd-rd-anJ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TcA-ZT-AhP" secondAttribute="bottom" id="sVv-sl-2GG"/>
+                            <constraint firstItem="7nM-td-HZY" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="vFj-8H-nj7"/>
+                            <constraint firstItem="oOe-Vh-PRE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-35" id="vcG-Fs-Q3M"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="UD7-M1-3d3"/>
+                                <exclude reference="UJl-me-mjL"/>
+                                <exclude reference="UMZ-sl-3Pp"/>
+                                <exclude reference="dxg-pl-opH"/>
+                                <exclude reference="oGd-rd-anJ"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="dxg-pl-opH"/>
+                                <exclude reference="f1f-Ou-hqt"/>
+                                <exclude reference="mwo-aK-UH4"/>
+                                <include reference="oGd-rd-anJ"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="UJl-me-mjL"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="foodImg" destination="KIA-DO-ixp" id="6jN-63-51F"/>
+                        <outlet property="heartImg" destination="3YA-tx-aM3" id="XL7-TF-tJa"/>
+                        <outlet property="monsterImg" destination="oOe-Vh-PRE" id="96J-BA-PUG"/>
+                        <outlet property="penalty1Img" destination="G8s-aU-sYw" id="RO2-3b-FxV"/>
+                        <outlet property="penalty2Img" destination="h2F-Zm-mU4" id="C1c-PH-Ic5"/>
+                        <outlet property="penalty3Img" destination="ZkG-ov-eIV" id="hRG-dA-4iW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="245" y="337"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bg" width="768" height="1024"/>
+        <image name="food" width="95" height="98"/>
+        <image name="ground" width="1444" height="151"/>
+        <image name="heart" width="95" height="98"/>
+        <image name="idle1" width="889" height="615"/>
+        <image name="livespanel" width="468" height="137"/>
+        <image name="skull" width="95" height="98"/>
+    </resources>
 </document>
